--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "postinstall": "motia install",
     "dev": "motia dev",
-    "start": "motia start",
+    "start": "npx ts-node index.ts",
     "generate-types": "motia generate-types",
-    "build": "motia build",
+    "build": "echo 'No build step'",
     "clean": "rm -rf dist node_modules python_modules .motia .mermaid"
   },
   "keywords": [
@@ -22,17 +22,24 @@
     "@motiadev/plugin-observability": "^0.17.9-beta.191",
     "@motiadev/plugin-states": "^0.17.9-beta.191",
     "@pinecone-database/pinecone": "^6.1.3",
+    "@types/pdf-parse": "^1.1.5",
     "@xenova/transformers": "^2.17.2",
+    "cors": "^2.8.5",
     "formidable": "^3.5.4",
     "fs-extra": "^11.3.3",
     "groq-sdk": "^0.37.0",
+    "jsforce": "^3.10.10",
     "motia": "^0.17.9-beta.191",
     "openai": "^6.15.0",
+    "pdf-parse": "^1.1.1",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@motiadev/workbench": "^0.17.9-beta.191",
+    "@types/body-parser": "^1.19.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/formidable": "^3.4.6",
     "@types/fs-extra": "^11.0.4",
     "@types/react": "^19.1.1",
